# rcc

./: .editorconfig  BUCK  Cargo.toml  c.ungram  c.yacc  design.md  l.ungram  notes.md  preprocessed.c  rustfmt.toml  setup.sh  todo.md
.cargo/: config.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
.trunk/: .gitignore  trunk.yaml
bzl/: import_llvm.bzl
cpp/hello_world/: BUCK  main.cc
crates/predefined_macros/: BUCK  Cargo.toml
crates/predefined_macros/src/: main.rs
crates/rcc/: BUCK  Cargo.toml
crates/rcc/src/: ast.rs  cst.rs  diagnostics.rs  lexer.rs  main.rs  parser.rs  preprocessor.rs  token_set.rs
crates/rcc/src/preprocess/gpp/: mod.rs  tests.rs
crates/rcc/src/preprocessor/: mod.rs
crates/rcc/src/preprocessor/gpp/: mod.rs  tests.rs
crates/rcc/tests/: lib.rs
crates/resilient_ll/: BUCK  Cargo.toml
crates/resilient_ll/src/: main.rs
crates/stdc_version/: BUCK  Cargo.toml
crates/stdc_version/src/: main.rs
ocaml/exercises/: BUCK  bin.ml
ocaml/helloworld/_build/: log
scripts/: preprocessor.py
testdata/: a.c  main.c
testdata/parse/: a.c  b.c  main.c  translation_unit.c
testdata/parse/ok/easy/: bitwise_operations_and_shifts.c  function.c  function_w_complex_statements.c  multiple_funcs_and_decls.c  while_loop.c
testdata/parse/ok/medium/: advanced_function_decl.c  array_and_loop.c  complex_conditional.c  function_pointers.c  pointer_and_struct.c  recursive.c  type_alias_and_typedef.c
testdata/preprocessor/basic_include/: a.h  b.h  c.h  in.c  out.c
testdata/preprocessor/define/: expected.c  in.c  out.c
testdata/preprocessor/global_transformations/: expected.c  in.c  out.c
testdata/preprocessor/ifdef/: expected.c  out.c
testdata/preprocessor/in/: define.c
testdata/preprocessor/std_predefined_macros/: expected.c  in.c  out.c
testdata/preprocessor/variadic_macro/: expected.c  expected.out.c  in.c  in.out.out.c
testdata/sem/: name_resolution.c
toolchains/: BUCK
