[package]
name = "predefined_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
smartstring = "1.0.1"
tracing = "0.1.27"
owo-colors = "3.5.0"
logos = "0.13.0"
