[package]
name = "rcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.26"
codespan-reporting = "0.11.1"
derive_more = "0.99.11"
derive-new = "0.5.9"
getset = "0.1.2"
logos = "0.13.0"
num-derive = "0.4.0"
num-traits = "0.2.16"
pretty_assertions_sorted = "1.2.3"
regex = "1.9.3"
rstest = "0.18.2"
shrinkwraprs = "0.3.0"
smartstring = "1.0.1"
strum = "0.25.0"
strum_macros = "0.25.2"
syntect = "5.1.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.27"
typed-builder = "0.16.0"
walkdir = "2.3.3"
owo-colors = "3.5.0"
